--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,12 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+# GLFW
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Don't build GLFW examples" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "Don't build GLFW tests" FORCE)
+add_subdirectory(externals/glfw)
+include_directories(externals/glfw/include)
+
 # This function should be passed a list of all files in a target. It will automatically generate
 # file groups following the directory hierarchy, so that the layout of the files in IDEs matches the
 # one in the filesystem.
@@ -38,3 +44,6 @@ set(GAME_HEADERS
 create_directory_groups(${GAME_SRCS} ${GAME_HEADERS})
 
 add_executable(Modership ${GAME_SRCS} ${GAME_HEADERS})
+target_link_libraries(Modership glfw ${GLFW_LIBRARIES})
+set_property(TARGET Modership PROPERTY CXX_STANDARD 11)
+set_property(TARGET Modership PROPERTY CXX_STANDARD_REQUIRED ON)
