--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ include_directories(externals/glfw/include)
 add_subdirectory(externals/glew/build/cmake)
 include_directories(externals/glew/include)
 
+# GLM
+include_directories(externals/glm)
+
 # This function should be passed a list of all files in a target. It will automatically generate
 # file groups following the directory hierarchy, so that the layout of the files in IDEs matches the
 # one in the filesystem.
