Added basic geometry

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,10 +54,14 @@ endif(DOXYGEN_FOUND)
 ## Engine ##
 set(ENGINE_SRCS
         src/Engine/MainWindow.cpp
+		src/Engine/Core/Geometry/Cube.cpp
+		src/Engine/Core/Geometry/Geometry3D.cpp
     )
 
 set(ENGINE_HEADERS
         src/Engine/MainWindow.hpp
+		src/Engine/Core/Geometry/Cube.hpp
+		src/Engine/Core/Geometry/Geometry3D.hpp
     )
 
 create_directory_groups(${ENGINE_SRCS} ${GAME_HEADERS})
