--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,10 +108,11 @@ set_property(TARGET Engine PROPERTY CXX_STANDARD_REQUIRED ON)
 ## Game ##
 set(GAME_SRCS
         src/Game/main.cpp
+        src/Game/Util/GameSettings.cpp
     )
 
 set(GAME_HEADERS
-        
+        src/Game/Util/GameSettings.hpp
     )
 
 create_directory_groups(${GAME_SRCS} ${GAME_HEADERS})
