--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,16 @@ include_directories(externals/glm)
 # STB
 include_directories(externals/stb)
 
+# OpenAL Soft
+set(ALSOFT_EXAMPLES OFF CACHE BOOL "Don't build OpenAL Soft examples" FORCE)
+add_subdirectory(externals/openal-soft)
+include_directories(externals/openal-soft/include)
+if(WIN32)
+    set(OPENAL_LIB OpenAL32)
+else()
+    set(OPENAL_LIB openal)
+endif()
+
 # This function should be passed a list of all files in a target. It will automatically generate
 # file groups following the directory hierarchy, so that the layout of the files in IDEs matches the
 # one in the filesystem.
