Started working on RenderSystem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,10 +141,12 @@ set_property(TARGET Engine PROPERTY CXX_STANDARD_REQUIRED ON)
 set(GAME_SRCS
         src/Game/main.cpp
         src/Game/Util/GameSettings.cpp
+		src/Game/System/RenderSystem.cpp
     )
 
 set(GAME_HEADERS
         src/Game/Util/GameSettings.hpp
+		src/Game/System/RenderSystem.hpp
     )
 
 create_directory_groups(${GAME_SRCS} ${GAME_HEADERS})
