--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ set(ENGINE_SRCS
         src/Engine/MainWindow.cpp
         src/Engine/Resources.cpp
         src/Engine/Audio/Listener.cpp
+        src/Engine/Audio/SoundBuffer.cpp
         src/Engine/Audio/SoundSystem.cpp
         src/Engine/Audio/VorbisFile.cpp
         src/Engine/Audio/WaveFile.cpp
@@ -122,6 +123,7 @@ set(ENGINE_HEADERS
         src/Engine/MainWindow.hpp
         src/Engine/Resources.hpp
         src/Engine/Audio/Listener.hpp
+        src/Engine/Audio/SoundBuffer.hpp
         src/Engine/Audio/SoundFile.hpp
         src/Engine/Audio/SoundSystem.hpp
         src/Engine/Audio/VorbisFile.hpp
