Added SuperComponent which all Components generalize.
All componenets now points to which Entity the component corresponds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,7 @@ set(ENGINE_SRCS
         src/Engine/Util/Log.cpp
         src/Engine/Util/Settings.cpp
         src/Engine/Util/Input.cpp
+        src/Engine/Component/SuperComponent.cpp
         src/Engine/Component/Lens.cpp
         src/Engine/Component/Transform.cpp
         src/Engine/Component/Mesh.cpp
@@ -142,6 +143,7 @@ set(ENGINE_HEADERS
         src/Engine/Util/Log.hpp
         src/Engine/Util/Settings.hpp
         src/Engine/Util/Input.hpp
+        src/Engine/Component/SuperComponent.hpp
         src/Engine/Component/Lens.hpp
         src/Engine/Component/Transform.hpp
         src/Engine/Component/Mesh.hpp
