Started work on GameObjects and GameScene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,11 +188,19 @@ set(GAME_SRCS
         src/Game/main.cpp
         src/Game/Util/GameSettings.cpp
         src/Game/CaveSystem/CaveSystem.cpp
+        src/Game/Util/GameEntityFactory.cpp
+        src/Game/Util/GameScene.cpp
+        src/Game/GameObject/GameObject.cpp
+        src/Game/GameObject/EnemyObject.cpp
     )
 
 set(GAME_HEADERS
         src/Game/Util/GameSettings.hpp
         src/Game/CaveSystem/CaveSystem.hpp
+        src/Game/Util/GameEntityFactory.hpp
+        src/Game/Util/GameScene.hpp
+        src/Game/GameObject/GameObject.hpp
+        src/Game/GameObject/EnemyObject.hpp
     )
 
 create_directory_groups(${GAME_SRCS} ${GAME_HEADERS})
