--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,7 @@ set(ENGINE_SRCS
         src/Engine/Component/Physics.cpp
         src/Engine/Component/Collider2DRectangle.cpp
         src/Engine/Component/Collider2DCircle.cpp
+        src/Engine/Component/DirectionalLight.cpp
         src/Engine/Entity/Entity.cpp
         src/Engine/Scene/Scene.cpp
         src/Engine/System/RenderSystem.cpp
@@ -183,6 +184,7 @@ set(ENGINE_HEADERS
         src/Engine/Component/Physics.hpp
         src/Engine/Component/Collider2DRectangle.hpp
         src/Engine/Component/Collider2DCircle.hpp
+        src/Engine/Component/DirectionalLight.hpp
         src/Engine/Entity/Entity.hpp
         src/Engine/Scene/Scene.hpp
         src/Engine/System/RenderSystem.hpp
