Point light component.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ set(ENGINE_SRCS
         src/Engine/Component/Collider2DRectangle.cpp
         src/Engine/Component/Collider2DCircle.cpp
         src/Engine/Component/DirectionalLight.cpp
+        src/Engine/Component/PointLight.cpp
         src/Engine/Entity/Entity.cpp
         src/Engine/Scene/Scene.cpp
         src/Engine/System/RenderSystem.cpp
@@ -185,6 +186,7 @@ set(ENGINE_HEADERS
         src/Engine/Component/Collider2DRectangle.hpp
         src/Engine/Component/Collider2DCircle.hpp
         src/Engine/Component/DirectionalLight.hpp
+        src/Engine/Component/PointLight.hpp
         src/Engine/Entity/Entity.hpp
         src/Engine/Scene/Scene.hpp
         src/Engine/System/RenderSystem.hpp
