--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,6 +143,7 @@ set(ENGINE_SRCS
         src/Engine/Component/Collider2DCircle.cpp
         src/Engine/Component/DirectionalLight.cpp
         src/Engine/Component/PointLight.cpp
+        src/Engine/Component/SpotLight.cpp
         src/Engine/Entity/Entity.cpp
         src/Engine/Scene/Scene.cpp
         src/Engine/System/RenderSystem.cpp
@@ -187,6 +188,7 @@ set(ENGINE_HEADERS
         src/Engine/Component/Collider2DCircle.hpp
         src/Engine/Component/DirectionalLight.hpp
         src/Engine/Component/PointLight.hpp
+        src/Engine/Component/SpotLight.hpp
         src/Engine/Entity/Entity.hpp
         src/Engine/Scene/Scene.hpp
         src/Engine/System/RenderSystem.hpp
