Started work on camera system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -216,6 +216,7 @@ set(GAME_SRCS
         src/Game/CaveSystem/CaveSystem.cpp
         src/Game/Util/GameEntityFactory.cpp
         src/Game/System/ControllerSystem.cpp
+        src/Game/System/CameraSystem.cpp
         src/Game/Component/Controller.cpp
     )
 
@@ -224,6 +225,7 @@ set(GAME_HEADERS
         src/Game/CaveSystem/CaveSystem.hpp
         src/Game/Util/GameEntityFactory.hpp
         src/Game/System/ControllerSystem.hpp
+        src/Game/System/CameraSystem.hpp
         src/Game/Component/Controller.hpp
     )
 
