Added camerafollow component and made player respawning take longer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -222,6 +222,7 @@ set(GAME_SRCS
         src/Game/Component/Spawner.cpp
         src/Game/Component/Health.cpp
         src/Game/Component/Damage.cpp
+        src/Game/Component/CameraFollow.cpp
     )
 
 set(GAME_HEADERS
@@ -238,6 +239,7 @@ set(GAME_HEADERS
         src/Game/Component/Spawner.hpp
         src/Game/Component/Health.hpp
         src/Game/Component/Damage.hpp
+        src/Game/Component/CameraFollow.hpp
     )
 
 create_directory_groups(${GAME_SRCS} ${GAME_HEADERS})
