--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ set(EMBEDDED_INPUT
         shaders/PostCopy.frag
         shaders/PostColor.frag
         shaders/PostFXAA.frag
+        shaders/PostFog.frag
         shaders/Deferred.frag
         shaders/Particle.vert
         shaders/Particle.geom
@@ -162,6 +163,7 @@ set(ENGINE_SRCS
         src/Engine/PostProcessing/PostProcessing.cpp
         src/Engine/PostProcessing/ColorFilter.cpp
         src/Engine/PostProcessing/FXAAFilter.cpp
+        src/Engine/PostProcessing/FogFilter.cpp
     )
 
 set(ENGINE_HEADERS
@@ -211,6 +213,7 @@ set(ENGINE_HEADERS
         src/Engine/PostProcessing/Filter.hpp
         src/Engine/PostProcessing/ColorFilter.hpp
         src/Engine/PostProcessing/FXAAFilter.hpp
+        src/Engine/PostProcessing/FogFilter.hpp
     )
 
 create_directory_groups(${ENGINE_SRCS} ${ENGINE_HEADERS})
