Added a Pontus Scene and created a simple AI component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -244,7 +244,9 @@ set(GAME_SRCS
         src/Game/Component/Health.cpp
         src/Game/Component/Damage.cpp
         src/Game/Component/CameraFollow.cpp
+        src/Game/Component/AI/WalkerAI.cpp
         src/Game/GameScenes/MainScene.cpp
+        src/Game/GameScenes/PontusScene.cpp
         src/Game/GameScenes/EmptyScene.cpp
         src/Game/Component/LifeTime.cpp
         src/Game/GameObject/Bullet.cpp
@@ -270,7 +272,9 @@ set(GAME_HEADERS
         src/Game/Component/Health.hpp
         src/Game/Component/Damage.hpp
         src/Game/Component/CameraFollow.hpp
+        src/Game/Component/AI/WalkerAI.hpp
         src/Game/GameScenes/MainScene.hpp
+        src/Game/GameScenes/PontusScene.hpp
         src/Game/GameScenes/EmptyScene.hpp
         src/Game/Component/LifeTime.hpp
         src/Game/GameObject/Bullet.hpp
