Add glow texture to Material.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ set(RESOURCES
         assets/DefaultDiffuse.png
         assets/DefaultNormal.png
         assets/DefaultSpecular.png
+        assets/DefaultGlow.png
         assets/ParticleAtlas.png
         assets/Laser.ogg
         assets/GolfBall.obj
